reports/test_arxiv_happy.txt
python.exe :   File "<string>", line 8
所在位置 行:1 字符: 1
+ & "D:\ComfyUI\.ext\python.exe" -c "
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 8:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    body = '''<?xml version=" 1.0\
           ^
SyntaxError: unterminated triple-quoted string literal (detected at line 8)
